# Smart-Retainer

./: CMakeLists.txt  Kconfig  VERSION  build_and_flash.sh  private_key.pem  prj.conf  sysbuild.conf
boards/: nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay
child_image/: hci_ipc.conf  hci_rpmsg.conf
src/: attitude_fusion.c  attitude_fusion.h  ble_imu_service.c  ble_imu_service.h  bno055_driver.c  bno055_driver.h  imu_driver.c  imu_driver.h  main.c  orientation_offset.c  orientation_offset.h
sum_log/: sum_log.c  sum_log.h
sum_printk/: sum_printk.c  sum_printk.h
sysbuild/: hci_ipc.conf  mcuboot.conf  mcuboot.overlay
tests/: test_main.c
tests/bme280_sanity/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bme280_sanity/boards/: nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay
tests/bme280_sanity/src/: main.c
tests/test_LED/: CMakeLists.txt  prj.conf  testcase.yaml
tests/test_LED/boards/: nrf7002dk_nrf5340_cpuapp_ns.overlay
tests/test_LED/src/: main.c
tests/test_basic_qemu/: CMakeLists.txt  prj.conf  testcase.yaml
tests/test_basic_qemu/src/: main.c
web/: index.html
